# ganelator

./: CMakeLists.txt  README.md  code that does nothing alone  first test file  list of functions
src/: main.c
